# vim-dn-utils

./: README.md  addon-info.json
autoload/dn/: util.vim
doc/: dn-utils-plugin.txt  dn-utils.txt
plugin/: commands.vim  dn-utils.vim  mappings.vim
scripts/: vim-dn-utils-console-select  vim-dn-utils-console-select.bak  vim-dn-utils-gui-select
vim-dn-utils-scripts/: vim-dn-utils-select-with-completion
vim-dn-utils-templates/: Makefile.am  configfile.rc  manpage.1  markdown.md  perlmod.pm  perlscript.pl  shellscript.sh  template.desktop  template.html  template.xhtml
